test/cases/parser/FieldProj.errors
src/FieldProj.b:5:18: Syntax error (couldn't parse 'a.')
src/FieldProj.b:6:13: Syntax error (couldn't parse 'a._')
src/FieldProj.b:7:13: Syntax error (couldn't parse 'a.0a')
